# MyMinVR

./: .gitignore  CMakeLists.txt
MyMinVR/: CMakeLists.txt  Main.cpp  MyVRApp.cpp  MyVRApp.h  imgui.ini  test.tga  test2_1.tga
MyMinVR/AssimpLoader/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt
MyMinVR/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  VRCamera.cpp  VRCamera.h
MyMinVR/GLMLoader/: GLMLoader.cpp  GLMLoader.h  VertexBuffer.cpp  VertexBuffer.h
MyMinVR/Model/: CMakeLists.txt  Model.cpp  Model.h  Transform.cpp  Transform.h
MyMinVR/ShaderProgram/: ShaderProgram.cpp  ShaderProgram.h
MyMinVR/Shaders/: atmosphere.frag  atmosphere.vert  linesShader.frag  linesShader.vert  shader.frag  shader.vert  simpleColorShader.frag  simpleColorShader.vert  terrainShader.frag  terrainShader.vert
MyMinVR/Terrain/: CMakeLists.txt  Terrain.cpp  Terrain.h
MyMinVR/Texture/: CMakeLists.txt  Texture.cpp  Texture.h
MyMinVR/common/: MYCMakeLists.txt.or  common.h  resource.h
MyMinVR/config/: 3DTV.minvr  HTC_Vive.minvr  HTC_Vive_2.minvr  RemoteDisplay.minvr  stereo.minvr
Resources/: buildingYunny2.mtl  myX3d.x3d
